# radar-sounder-rnn

./: .gitignore  Dockerfile  README.md  launch_docker.sh  pyproject.toml
notebooks/: example.ipynb  times.ipynb
scripts/: ablation.sh  cw.py  cycle.py  cycle_double.py  cycle_mod.py  example.py  experiment.py  experiment.sh  optimize.py  process_results.py  qual.py  qual_1d.py  qual_weak.py  test.py  test_weak.py  train.py  weak.py
scripts/config_files/: cw.yaml  cycle.yaml  cycle_double.yaml  cycle_mod.yaml  example.yaml  experiment.yaml  optimize.yaml  qual.yaml  qual_1d.yaml  qual_weak.yaml  test.yaml  test_weak.yaml  train.yaml  weak.yaml
src/: aspp.py  cnn.py  dataset.py  model.py  nl.py  one_d.py  rnn.py  unet.py  utils.py
src/scripting/: __init__.py  _scripting.py
