[project]
requires-python = ">= 3.10.13"
name = "pyproject-template"
version = "1.1.0"
readme = "README.md"
license = { text = "pyproject-template © 2024 by RSLab@DISI, UniTrento (Italy) is licensed under CC BY 4.0 " }
description = "Template Repo for a Python project with Docker Container dev environment and src layout"
authors = [{ name = "Name Surname", email = "your.email@domain.org" }]
maintainers = [{ name = "Name Surname", email = "your.email@domain.org" }]
dependencies = [
    "folium == 0.16.0",
    "geopandas == 0.14.1",
    "h5py == 3.10.0",
    "ipykernel == 6.29.4",
    "ipywidgets == 8.1.2",
    "joblib == 1.3.2",
    "matplotlib == 3.8.0",
    "mapclassify == 2.6.1",
    "numpy == 1.26.4",
    "openpyxl == 3.1.2",
    "pandas == 1.5.3",
    "pyogrio == 0.7.2",
    "PyYAML == 6.0.1",
    "rasterio == 1.3.9",
    "scikit-image == 0.22.0",
    "scikit-learn == 1.2.0",
    "scipy == 1.11.1",
    "tqdm == 4.66.1",
]
