[project]
requires-python = ">= 3.10.12"
name = "recurrent-sounder"
version = "1.1.0"
readme = "README.md"
license = { text = "recurrent-sounder © 2024 by RSLab@DISI, UniTrento (Italy) is licensed under CC BY 4.0 " }
description = "Repository for applying recurrent convolutional models to radar sounder data"
authors = [{ name = "Jordy Dal Corso", email = "jordy.dalcorso@unitn.it" }]
maintainers = [{ name = "Jordy Dal Corso", email = "jordy.dalcorso@unitn.it" }]
dependencies = [
    "sh",
    "rasterio==1.3.11"
]
